--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(
 	VERSION 1.0
 	LANGUAGES CXX)
 
-set(SOURCES src/save_data.cpp src/main.cpp)
+set(SOURCES src/uuid.cpp src/save_data.cpp src/main.cpp)
 
 add_executable(Spyro-dotd-Save-Editor ${SOURCES})
 target_include_directories(Spyro-dotd-Save-Editor PRIVATE ${PROJECT_SOURCE_DIR}/include)
