Added the ability to read a save file's UUID and dummy status.
Added read function to GameSave class and removed it's constructor. Added a FileDialog for opening a file. Controls now become disabled when they should be inaccessible. Made GUI controls public for editing their values when a file is loaded in. Moved Chapter enum from gui.cpp to uuid.hpp. Added constexpr int array for the number of locations for each chapter. Created a typedef for UUID (4 4-byte array). Added all spawn point UUID's into a single array.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15...3.31)
 project(Spyro-dotd-Save-Editor LANGUAGES CXX)
 set (CMAKE_CXX_STANDARD 20)
 
-set(SOURCES src/save_data.cpp src/gui.cpp src/main.cpp)
+set(SOURCES src/uuid.cpp src/save_data.cpp src/gui.cpp src/main.cpp)
 add_executable(Spyro-dotd-Save-Editor ${SOURCES})
 target_include_directories(Spyro-dotd-Save-Editor PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
